--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "mongoose": "^8.6.2"
   },
   "devDependencies": {
     "compression": "^1.7.4",
